--- a/client/views/proto.html
+++ b/client/views/proto.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<div id="nutrients">
+<div id="nutrient-table">
   <div class="col-md-2 col-md-offset-5">
     <table class="table">
       <tbody>
